# proyek-pemrograman-fungsional-habit-tracker

./: README.md  index.html  package-lock.json  package.json  vite.config.js
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: habit_commands.rs  mod.rs
src-tauri/src/database/: habit_db.rs  mod.rs
src-tauri/src/models/: habit.rs  mod.rs
src-tauri/src/statistics/: calculator.rs
src/assets/: styles.css
src/components/: HabitForm.vue  HabitList.vue  InsightPanel.vue  StatisticsChart.vue
src/stores/: habitStore.js
